--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 </head>
 <body>
     <nav>
-        <h1>GMD</h1>
-        <a href="">GALLERY</a>
-        <a href="">ABOUT US</a>
-        <a href="">CONTACT US</a>
+        <div class="leftie">
+            <h1>GMD</h1>
+        </div>
+        <div class="rightie">
+            <a href="">GALLERY</a>
+            <a href="">ABOUT US</a>
+            <a href="">CONTACT US</a>
+        </div>
     </nav>
-    <header><h1>This is our awesome idea</h1>
-    <p>We are inspired to help you commemorate your big day using our amaing decor which is sure to increase 
+    <header>
+        <h1>This is our awesome idea</h1>
+        <p>We are inspired to help you commemorate your big day using our amaing decor which is sure to increase 
         some wow factor to your event.
-    </p>
-    <img src="./../../Pictures/Beaks Logo.jpeg" alt="Sample Image">
+        </p>
+        <button>Sign up</button>
+        <img src="./../../Pictures/Beaks Logo.jpeg" alt="Sample Image">
     </header>
     <div class="information">
         <h1>
